--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <div class="logo">おぶすま社会保険労務事務所</div>
+            <div class="logo">おぶすま社会保険労務士事務所</div>
             <a href="https://chatgpt.com/g/g-6978b61a1fe4819193d06510e43ad7c4-zi-fen-shi-zuo-cheng-ahuri" target="_blank" rel="noopener noreferrer" class="nav-cta">今すぐ無料体験</a>
         </nav>
     </header>
@@ -1056,7 +1056,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2026 おぶすま社会保険労務事務所 All rights reserved.</p>
+            <p>&copy; 2026 おぶすま社会保険労務士事務所 All rights reserved.</p>
         </div>
     </footer>
 
